# do-prompts-dream-of-images

./: .gitignore  .gitmodules  README.md  go.mod  go.sum  pip-install  pyproject.toml  requirements.txt  test_packages.py
.devcontainer/: Dockerfile  build_app_container.sh  build_base_container.sh  devcontainer.json  docker-compose.yml  format_notebook.sh  install.sh  post_attach.sh  post_create.sh  update_notebook.sh
.github/ISSUE_TEMPLATE/: new_feature.md
cmd/update_notebook/: main.go
scripts/stablediffusion/: generate_single_image.py
scripts/stablediffusion/docs/: generate_single_image.md
test/: @test_packages.ipynb  test_i2i_movie.py  test_models.py  test_packages.py
test/docs/: test_i2i_movie.md  test_models.md  test_packages.md
tools/jupytext_watcher/: main.go
