[tool.poetry]
name = "do-prompts-dream-of-images"
version = "0.1.0"
description = ""
authors = ["Kasai Kou <streamwest1629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
jupytext = "1.14.4"
jupyter = "^1.0.0"
pyqt5 = "^5.15.8"
ipykernel = "^6.20.2"
ipython = "^8.9.0"
jupyterlab = "^3.5.3"
ipywidgets = "<8"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pillow = "^9.4.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
diffusers = {git = "https://github.com/huggingface/diffusers.git"}
accelerate = "^0.16.0"
transformers = "^4.26.0"
omegaconf = "^2.3.0"
pytorch-lightning = "^1.9.0"
tensorboard = "^2.11.2"
safetensors = "^0.2.8"
bitsandbytes = "^0.36.0.post2"
scikit-learn = "^1.2.1"
ftfy = "^6.1.1"
gradio = "^3.17.0"
opencv-python = "^4.7.0.68"
gitpython = "^3.1.30"

[tool.poetry.group.editor.dependencies]
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
mypy = "^0.991"
nbstripout = "^0.6.1"
flake8 = "^6.0.0"
nbqa = "^1.6.3"

[tool.flake8]
extend-ignore = ["E203", "E501", "W503"]
exclude = [".venv", ".git", "mnt", "__pycache__"]
max-complexity = 10

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
